--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,44 @@
+<!--<resources>-->
+
+    <!--&lt;!&ndash; Base application theme. &ndash;&gt;-->
+    <!--<style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">-->
+        <!--<item name="colorPrimary">@color/sunshine_blue</item>-->
+        <!--<item name="colorPrimaryDark">@color/sunshine_dark_blue</item>-->
+    <!--</style>-->
+
+    <!--&lt;!&ndash; Main activity theme. &ndash;&gt;-->
+    <!--<style name="ForecastTheme" parent="AppTheme">-->
+        <!--<item name="actionBarStyle">@style/ActionBar.Solid.Sunshine.NoTitle</item>-->
+    <!--</style>-->
+    <!--<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>-->
+
+    <!--<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>-->
+
+    <!--&lt;!&ndash; Settings activity theme. &ndash;&gt;-->
+    <!--<style name="SettingsTheme" parent="AppTheme">-->
+    <!--</style>-->
+
+    <!--&lt;!&ndash; main activity action bar styles &ndash;&gt;-->
+    <!--<style name="ActionBar.Solid.Sunshine.NoTitle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">-->
+        <!--<item name="displayOptions">useLogo|showHome</item>-->
+        <!--<item name="logo">@drawable/ic_logo</item>-->
+    <!--</style>-->
+
+    <!--&lt;!&ndash; Style for forecast listview &ndash;&gt;-->
+    <!--<style name="ForecastListStyle">-->
+        <!--&lt;!&ndash; Here it's a stub.  In screens of sufficient width, this style includes modifications-->
+        <!--for two-pane layout &ndash;&gt;-->
+    <!--</style>-->
+
+<!--</resources>-->
 <resources>
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/sunshine_blue</item>
+        <item name="colorPrimaryDark">@color/sunshine_dark_blue</item>
+        <item name="colorAccent">@color/sunshine_light_blue</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
